# SolidMechanics

./: CMakeLists.txt  main.cpp
GeometricalSolid/: CMakeLists.txt
GeometricalSolid/Include/: Cone.h  Disk.h  Elbow.h  Rectangle.h  Shape.h  Solid.h  Sphere.h
GeometricalSolid/Include/Formatter/: SolidFormatter.h
GeometricalSolid/Include/Parser/: SolidParser.h
GeometricalSolid/Source/: Solid.cpp
GeometricalSolid/Tests/: CMakeLists.txt  Precision.h  TestSolid.cpp  TestSphere.cpp  main.cpp
GeometricalSpaceObjects/: CMakeLists.txt
GeometricalSpaceObjects/Include/: Basis.h  Matrix.h  Point.h  Quaternion.h  Vector.h  VectorsQuaternionConverter.h
GeometricalSpaceObjects/Include/Formatter/: BasisFormatter.h  MatrixFormatter.h  PointFormatter.h  QuaternionFormatter.h  VectorFormatter.h
GeometricalSpaceObjects/Include/Parser/: BasisParser.h  MatrixParser.h  PointParser.h  QuaternionParser.h  VectorParser.h
GeometricalSpaceObjects/Tests/: CMakeLists.txt  Precision.h  TestBasis.cpp  TestMatrix.cpp  TestPoint.cpp  TestQuaternion.cpp  TestVector.cpp  mpreal.h
